Fixed spacing

--- a/options.css
+++ b/options.css
@@ -30,17 +30,14 @@
   flex-direction: row;
   flex-grow: 1;
 
-  /*border-bottom: 1px;*/
-  /*border-bottom-style: solid;*/
-  /*border-bottom-color: #bce8f1;*/
   margin-bottom: 10px;
   padding-bottom: 10px;
   padding-top: 10px;
 }
 
-/*.settings-wrapper:last-child {*/
-  /*border: none;*/
-/*}*/
+.settings-wrapper:last-child {
+  padding-bottom: 20px;
+}
 
 .setting {
   display: flex;
@@ -48,14 +45,20 @@
   justify-content: center;
   order: 1;
   min-width: 33%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #setting-row {
   display: flex;
-  justify-content: center;
-  order: 1;
-  min-width: 33%;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  order: 1;
+
+  min-width: 33%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .setting-definition {
@@ -67,7 +70,8 @@
   border-left-color: #bce8f1;
   border-left-width: 1px;
   margin-left: 5px;
-  padding-left: 10px;
+  padding-left: 25px;
+  padding-right: 20px;
 }
 
 .context-cache {
@@ -88,10 +92,11 @@
 
 .list-item {
   background-color: white;
-  height: 15px;
+  /*height: 15px;*/
   margin: 3px 3px 3px 3px;
-  padding: 1.4em;
-  padding-left: 1.5em;
+  /*padding: 1.4em;*/
+  /*padding-left: 1.5em;*/
+  padding: 10px;
   border: 1px solid #ddd;
 }
 
@@ -103,6 +108,10 @@
 .list-item:last-child {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
+}
+
+.list-item img {
+  min-width: 165px;
 }
 
 .title {
@@ -130,6 +139,7 @@ p {
 	padding: 0px;
 }
 
-span {
+.radio-wrapper {
   padding-left: 10px;
+  height: 20px;
 }
